# AI-S2_student

./: .gitignore  README.md  ai_s2_conda.yaml  prog_formatieve_evaluatie.py
document/: verantwoordingsdocument.md
prog12_new_delete_practice/: CMakeLists.txt  four.cpp  one.cpp  three.cpp  two.cpp  whatgoeswhere.cpp
prog14_class_oefening/: Biography.cpp  Biography.h  Book.cpp  Book.h  BookCompany.h  Branch.cpp  Branch.h  CMakeLists.txt  Employee.h  FictionBook.cpp  FictionBook.h  IForSale.h  OfficeArticle.cpp  OfficeArticle.h
prog16_polymorphism_en_graaf/: CMakeLists.txt  main.cpp  main_graaf.cpp
prog17_priority_queue/: CMakeLists.txt  main.cpp
python/debugger/: debugger_antwoorden.md
